--- a/Tinder_Clone/Info.plist
+++ b/Tinder_Clone/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need to access to your location !!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need to access to your camera !!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need to access to your library !!</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
